--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,7 +1,7 @@
 .footer {
 	position: relative;
 	z-index: 2;
-	background: rgba(2, 85, 131, 0.8);
+	background: #34769b;
 	// .footer__container
 	&__container {
 	}
