--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,13 +1,12 @@
-/*
 .header {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	z-index: 50;
-	padding: 50px 0px 50px 0px;
+	padding: 28px 0px;
 	@media (max-width: $mobile) {
-		padding: 23px 0px 10px 0px;
+		padding: 18px 0px 10px 0px;
 	}
 	// .header__content
 	&__content {
@@ -22,7 +21,7 @@
 	// .header__logo
 	&__logo {
 		img {
-			height: 64px;
+			height: 66px;
 		}
 		@media (max-width: $mobile) {
 			img {
@@ -32,6 +31,7 @@
 	}
 	// .header__whatsapp
 	&__whatsapp {
+		margin: 12px 0px 0px 0px;
 		display: flex;
 		align-items: center;
 		@media (max-width: $mobile) {
@@ -51,8 +51,8 @@
 		font-family: "Calibri";
 		font-weight: 700;
 		font-size: 16px;
-		line-height: math.div(26, 16);
-		letter-spacing: 0.08px;
-		color: #ffffff;
+		line-height: 160%;
+		letter-spacing: 0.01em;
+		color: #fff;
 	}
-}*/
+}
